[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }
prost-build = { version = "0.13" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
# network
tokio = { version = "1.41.1", features = ["full"] }
# protobuf
prost = "0.13"
prost-types = "0.13"
once_cell = "1.20.2"
bytes = "1.9.0"
dirs = "6.0.0"
# SQL
rusqlite = { version = "0.33.0" }
chrono = "0.4.26"
